feat(common): 增强核心模块与工具库功能及安全性
- 新增 Core 模块自动配置开关及链路追踪相关配置项
- BaseResponse 构造时统一从 MDC 使用 Trace 常量获取 traceId
- 优化 BeanCopyUtils 缓存清理逻辑，保证线程安全与性能
- CompressUtils 增加 ZIP 炸弹及 Zip Slip 路径遍历防护机制
- ContextKey 增加类型安全的 map 方法重载，增强泛型使用
- CoreAutoConfiguration 支持 MessageSource 自动注册国际化解析器
- CoreProperties 新增 TraceId 生成策略配置（uuid/snowflake）
- DigestUtils 替换为线程安全的共享 SecureRandom 实例
- EnhancedLoadingCache 修正缓存统计数据合并逻辑
- FileUtils 提供字节转十六进制工具、文件下载超时配置及安全关闭流
- HeaderConstants 保留旧请求 ID 常量，推荐使用统一 Trace 常量
- Json 相关模块优化字节流编码及字符串转义解析，提升性能和正确性
- LocalDateTimeUtils 使用缓存 DateTimeFormatter 提高解析效率
- MultiLevelCache 优化 L1 和 L2 缓存批量查询及命中率统计
- OkHttpProperties 增加属性校验注解，确保配置有效范围
- OkHttpUtils 新增 PATCH 请求支持及请求级超时控制功能
- 优化 OkHttp 客户端关闭流程，防止异常及资源泄漏风险